# IBKRFetcher

./: .gitignore  pyproject.toml  requirements.txt
MagicMock/load_config().database.path/: 124844157159312
configs/: config.yaml  symbols.yaml
mock_gateway/: README.md  __init__.py  __main__.py  fake_data.py  ibkr_mock_server.py  requirements.txt
scripts/: test_real_gateway.py
src/ibkr_datafetcher/: __main__.py  cli.py  config.py  db.py  ibkr_client.py  kline_fetcher.py  news_fetcher.py  rate_limiter.py  scheduler.py  timeframe_prober.py  types.py
src/ibkr_datafetcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_e2e.py  test_ibkr_client.py  test_integration.py  test_kline_fetcher.py  test_mock_gateway.py  test_mock_gateway_pytest.py  test_news_fetcher.py  test_rate_limiter.py  test_scheduler.py  test_timeframe_prober.py  test_types.py
