[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-datafetcher"
version = "0.1.0"
description = "Fetch and sync historical market data from Interactive Brokers"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ibkr-datafetcher contributors" }]
dependencies = [
    "click>=8.0",
    "PyYAML>=6.0",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ib-insync>=0.9.86",
]

[project.scripts]
ibkr-fetch = "ibkr_datafetcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
